fixed overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,6 @@
 html {
     background-image: url("abbywebsitebg2.png");
     font-size: 1em; 
-/*    background-size: cover;*/
     overflow-x: hidden;
   
     
@@ -112,13 +111,13 @@ and (orientation: portrait) {
         right: 0;
         bottom: 0;
         left: 0;
-        background: #2f2c3d;
+        background: #86CBED;
     }
 
     .spinner {
         position: absolute;
-        top: 50%; 
-        left: 50%; 
+        top: 20%; 
+        left: 25%; 
         width: 3.75rem;
         height: 1.25rem;
         margin: -0.625rem 0 0 -1.875rem; 
@@ -235,7 +234,7 @@ and (orientation: portrait) {
     }
 
     .regular-big {
-        text-decoration: underline;
+       /* text-decoration: underline;*/
          font-weight: bolder;
         font-family: 'Varela Round', sans-serif;
     }
@@ -243,7 +242,14 @@ and (orientation: portrait) {
     /* PROJECTS (instead i have projectsarchive.html for mobile ) */
     #myprojects { display: none; }
 
-    #myspeaking { display: none }
+    #myspeaking { display: none; }
+
+    #hmu {
+        margin-top: 10rem;
+    }
+
+
+
 
     /* social media */
     .fa {
