--- a/styles/projects2.css
+++ b/styles/projects2.css
@@ -17,9 +17,18 @@ html {
 
 }
 
+.top {
+	display: flex;
+	justify-content: center;
+}
+
 .mywork {
 	text-align: center;
-	border: 5px solid grey;
+	color: black;
+	border: 5px solid black;
+	background-color: #86CBED;
+	width: 170px;
+	height: 50px;
 }
 h1, h3 {
 	font-family: 'Varela Round', sans-serif;
@@ -39,6 +48,10 @@ p {
 }
 
 @media screen and (min-width: 1024px) {
+
+body {
+	overflow-x: hidden;
+}
 	.grid {
 		grid-row-start: 1
 		grid-row-end: 3;
@@ -47,7 +60,7 @@ p {
 	}
 
 	.grid > .box {
-		width: 300px;
+		width: 400px;
 		height: 260px;
 	/*	border: 1px solid grey;
 		background-color: pink;
@@ -61,6 +74,11 @@ p {
 
 @media screen and (max-device-width: 480px)
 and (orientation: portrait) {
+
+
+html {
+	overflow-x: hidden;
+}
 .grid {
 	flex-direction: column;
 }
